Create parameter object for ActionPlugin.getRestHandlers